--- a/www/index.html
+++ b/www/index.html
@@ -40,9 +40,9 @@ window.localStorage.setItem('ls_userid',0);
               <div id="divtest"></div>    
                <div class="loginform">
                 <form id="LoginForm" method="post">
-                <div class="form_row" style="display:none">
+                <div class="form_row" style="">
                 <div class="form_row_icon"><img src="images/icons/blue/shop.png" alt="" title="" /></div>
-                <input type="text" id="database" value="BRANCH_1" name="Business" class="form_input required" placeholder="Business Name" />
+                <input type="text" id="database" disabled value="BRANCH_1" name="Business" class="form_input required" placeholder="Business Name" />
                 </div>
                 <div class="form_row">
                 <div class="form_row_icon"><img src="images/icons/blue/user.png" alt="" title="" /></div>
