--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@ window.localStorage.setItem('ls_userid',0);
                 <form id="LoginForm" method="post">
                 <div class="form_row" style="">
                 <div class="form_row_icon"><img src="images/icons/blue/shop.png" alt="" title="" /></div>
-                <input type="text" id="database" disabled value="BRANCH_1" name="Business" class="form_input required" placeholder="Business Name" />
+                <input type="text" id="database" value="BRANCH_1" name="Business" class="form_input required" placeholder="Business Name" />
                 </div>
                 <div class="form_row">
                 <div class="form_row_icon"><img src="images/icons/blue/user.png" alt="" title="" /></div>
